# cmake

./: README.md
HelloWorld/: CMakeLists.txt
alternative_project_structure/: CMakeLists.txt
alternative_project_structure/app/: CMakeLists.txt
alternative_project_structure/inc/my_lib/: CMakeLists.txt
alternative_project_structure/src/my_lib/: CMakeLists.txt
example_project/: CMakeLists.txt  main.cc  my_lib.cc  readme.md
example_project/app/: CMakeLists.txt  main.cc
example_project/configured/: CMakeLists.txt
example_project/src/: CMakeLists.txt
example_project/src/my_lib/: CMakeLists.txt  my_lib.cc
